--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/bill?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF8
     username: root
-    password: root
+    password: jaM1s2PAw57o11pAlIFImECEqAjAHu
     type: com.alibaba.druid.pool.DruidDataSource
     # 数据源其他配置, DataSourceProperties中没有相关属性,默认无法绑定
     initialSize: 8
