--- a/.drone.yml
+++ b/.drone.yml
@@ -6,4 +6,9 @@ steps:
   commands:
   - echo "准备测试"
   - pwd
-  - java --help
+step:
+- name: run
+  image: java:8
+  commands:
+  - echo "运行jdk镜像"
+  - java
